--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "babel-plugin-react-jsx-directives",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Babel plugin that carries directives to React JSX: `$if/$else`",
   "main": "index.js",
   "scripts": {},
@@ -9,7 +9,10 @@
     "url": "git+https://github.com/damianc/gulp-javascript-pl.git"
   },
   "keywords": [
-    "babel", "babel-plugin", "react", "jsx"
+    "babel",
+    "babel-plugin",
+    "react",
+    "jsx"
   ],
   "author": "Damian Czapiewski (GH: @damianc)",
   "license": "ISC",
